feat: 홍보센터 - 전시회 참가 - 제품소개 css 일부 공통으로 이전 및 삭제

--- a/pub/pr_center.html
+++ b/pub/pr_center.html
@@ -243,6 +243,7 @@
             <section id="panel-exhibition" class="inner_tab_panel is-active">
                 <div class="pr_list_section js-more-wrap" data-more-step="5">
                     <ul class="pr_list">
+                        <!-- 전시화 참가 리스트 -->
                         <li class="pr_item js-more-item">
                             <a href="javascript:void(0);" class="pr_item_link" target="_blank">
 
@@ -258,9 +259,297 @@
                                         뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
                                     </h3>
                                     <p class="pr_item_desc">
-                                        뉴오토정밀은 압력수 등 다양한 기초를 기반으로 차량용 부품을
-                                        제작하고 있습니다. 워터펌프와 오일펌프 등 다양한 제품군을 구성하여
-                                        고객의 다양한 요구를 만족시키고 있습니다.
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">전시회 참가</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 전시회 참가 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
                                     </p>
                                     <p class="pr_item_date">2024.07.15.</p>
                                 </div>
