feat: 홍보센터 - 뉴스 (리스트) - CSS 미디어쿼리부분 고의로 각 섹션을 나누어 제작했습니다(추후 유지보수 시, 더 쉽게 서칭하여 보수하기 위함 입니다).

--- a/pub/pr_center.html
+++ b/pub/pr_center.html
@@ -575,10 +575,215 @@
             <section id="panel-news" class="inner_tab_panel">
                 <!-- 뉴스 전용 클래스 분기 사용 -->
                 <div class="pr_list_section pr_list_section--news js-more-wrap"
-                     data-more-step="5">
+                     data-more-step="6">
 
                     <ul class="pr_list">
-                        <li class="pr_item js-more-item">…</li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
+                        <li class="pr_item js-more-item">
+                            <a href="javascript:void(0);" class="pr_item_link" target="_blank">
+
+                                <!-- 썸네일 영역 -->
+                                <div class="pr_item_thumb">
+                                    <img src="./images/sample_new_img.png" alt="뉴오토정밀 로고">
+                                </div>
+
+                                <!-- 텍스트 영역 -->
+                                <div class="pr_item_body">
+                                    <p class="pr_item_category">뉴스</p>
+                                    <h3 class="pr_item_title">
+                                        뉴오토정밀 뉴스 페이지입니다. 제목을 입력해 주세요.
+                                    </h3>
+                                    <p class="pr_item_desc">
+                                        뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과 ONE-STOP
+                                        SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게 신뢰받는 기업으로
+                                        성장하고 있습니다. 뉴오토정밀은 알루미늄 다이캐스팅 기술을 기반으로 자동차 엔진부품의 설계 및 제작과
+                                        ONE-STOP SYSTEM(맞춤형 관리 시스템)을 구축하여 고객 중심의 기술개발과 경영혁신으로 고객에게
+                                        신뢰받는 기업으로 성장하고 있습니다.
+                                    </p>
+                                    <p class="pr_item_date">2024.07.15.</p>
+                                </div>
+
+                            </a>
+                        </li>
                     </ul>
 
                     <div class="pr_list_more">
